# click-lite

./: .env.example  Cargo.toml
src/: actions.rs  app.rs  error.rs  lib.rs  main.rs
src/api/: chats.rs  clickup.rs  client.rs  mod.rs  users.rs
src/ui/: chat_area.rs  header.rs  mod.rs  sidebar.rs
themes/: tokyonight.json
