[package]
name = "click-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "*" }
gpui-component = "^0.5.0"
dotenvy = "^0.15.7"
reqwest = { version = "^0.12.25", features = ["blocking", "json"] }
serde = { version = "^1.0.0", features = ["derive"] }
thiserror = "^2.0.0"
serde_json = "1.0.0"
regex = "1"
